# sf-render

./: CMakeLists.txt  ReadMe.md  build.sh  main.cc
inc/: color.h  matrix.hpp  point.h  point.hpp  renderer.h  transform.hpp  trapezoid.h  vector.hpp  vertex.h
src/: point.cc  renderer.cc
